--- a/client/src/layout/Player.module.scss
+++ b/client/src/layout/Player.module.scss
@@ -15,8 +15,71 @@
     height: 100%;
     background-color: #ececec;
     box-sizing: border-box;
-    padding: 0px;
+    padding: 0px 20px;
 
+}
+
+.button {
+    transition: all 0.1s ease;
+    background-color: #ffffff00;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 68px;
+    height: 68px;
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        inset: 0;
+        border: 2px solid transparent;
+        background: linear-gradient(90deg,
+                transparent calc(var(--mouse-x, 0%) - 80%),
+                #8e8e8e calc(var(--mouse-x, 0%)),
+                transparent calc(var(--mouse-x, 0%) + 80%)) border-box;
+        background-position: 0 var(--mouse-y, 0%);
+        background-size: 100% 200%;
+        -webkit-mask:
+            linear-gradient(#fff 0 0) padding-box,
+            linear-gradient(#fff 0 0);
+        -webkit-mask-composite: destination-out;
+        mask-composite: exclude;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
+
+    &:hover::before {
+        opacity: 0.5;
+    }
+
+    &:hover {
+        background-color: #d9d9d9;
+    }
+
+    &:active {
+        background-color: #c9c9c9;
+    }
+
+    .button__icon {
+        width: 20px;
+        height: 20px;
+        color: #323232;
+    }
+
+}
+
+.button__active {
+    background-color: #d9d9d9;
+
+    &:hover {
+        background-color: #c9c9c9;
+    }
+
+    &:active {
+        background-color: #b9b9b9;
+    }
 }
 
 .left__buttons {
@@ -25,147 +88,189 @@
     justify-content: space-between;
     align-items: center;
     gap: 5px;
-
-    .left__button {
-        background-color: #ffffff00;
-        border: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 68px;
-        height: 68px;
-        position: relative;
-
-        &::before {
-            content: '';
-            position: absolute;
-            inset: 0;
-            border: 2px solid transparent;
-            background: linear-gradient(90deg,
-                    transparent calc(var(--mouse-x, 0%) - 80%),
-                    #8e8e8e calc(var(--mouse-x, 0%)),
-                    transparent calc(var(--mouse-x, 0%) + 80%)) border-box;
-            background-position: 0 var(--mouse-y, 0%);
-            background-size: 100% 200%;
-            -webkit-mask:
-                linear-gradient(#fff 0 0) padding-box,
-                linear-gradient(#fff 0 0);
-            -webkit-mask-composite: destination-out;
-            mask-composite: exclude;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-        }
-
-        &:hover::before {
-            opacity: 0.5;
-        }
-
-        &:hover {
-            background-color: #d9d9d9;
-        }
-
-        &:active {
-            background-color: #c9c9c9;
-        }
-
-        .left__button__icon {
-            width: 20px;
-            height: 20px;
-            color: #323232;
-        }
-
-    }
-
-    .left__button__active {
-        background-color: #d9d9d9;
-
-        &:hover {
-            background-color: #c9c9c9;
-        }
-
-        &:active {
-            background-color: #b9b9b9;
-        }
-    }
-
 }
-.track{
+
+.track {
     margin-left: 30px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 5px;
-    .track__image{
+
+    .track__image {
         width: 68px;
         height: 68px;
         background-color: #4e4e4e;
+
+        .track__image__icon {
+            width: 100%;
+            height: 100%;
+            transition: all 0.2s ease;
+            background-color: #8e8e8e;
+
+            &:hover {
+                opacity: 0.5;
+            }
+        }
     }
-    .track__text{
+
+    .track__text {
         margin-left: 10px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         gap: 8px;
-        .track__title{
+
+        .track__title {
             user-select: none;
             cursor: pointer;
             transition: all 0.1s ease;
             font-size: 16px;
             font-weight: 700;
-            &:hover{
+
+            &:hover {
                 color: #797979;
             }
         }
-        .track__artist{
+
+        .track__artist {
             user-select: none;
             cursor: pointer;
             transition: all 0.1s ease;
             font-size: 12px;
             font-weight: 600;
-            &:hover{
+
+            &:hover {
                 color: #797979;
             }
         }
     }
-    .track__buttons{
+
+    .track__buttons {
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 10px;
-        .track__button{
-            width: 68px;
-            height: 68px;
-            background-color: #ffffff00;
-            border: none;
-            .track__button__icon{
-                width: 16px;
-                height: 16px;
-                color: #323232;
-            }
-            &:hover{
-                background-color: #d9d9d9;
-            }
+
+        .track__button__icon {
+            width: 16px;
+            height: 16px;
+            color: #323232;
         }
-        .track__button__like{
+
+        .track__button__like {
             position: relative;
-            &:hover{
+
+            &:hover {
                 background-color: #d9d9d9;
             }
-            .track__button__icon{
+
+            .track__button__icon {
                 color: #919191;
             }
-         
+
         }
-        .track__button__liked{
-            .track__button__icon{
+
+        .track__button__liked {
+            .track__button__icon {
                 color: #ff0000;
             }
         }
-        .track__button__added{
-            .track__button__icon{
+
+        .track__button__added {
+            .track__button__icon {
                 color: #323232;
             }
         }
     }
+}
+
+.right__buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 5px;
+
+    .right__button__icon {
+        width: 16px;
+        height: 16px;
+        color: #323232;
+    }
+}
+
+.more__block {
+    position: relative;
+
+    .more__list {
+        overflow: hidden;
+        top: -100%;
+        right: 50%;
+        transform: translate(50%, -60%);
+        width: 200px;
+        transition: all 0.2s ease;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        background-color: #ececec;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+        .more_button {
+            padding: 0 15px;
+            gap: 10px;
+            transition: all 0.3s ease;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            position: relative;
+            height: 40px;
+            width: 100%;
+            border: none;
+            &:hover {
+                background-color: #d9d9d9;
+            }
+            &:active {
+                background-color: #c9c9c9;
+            }
+            &::before {
+                content: '';
+                position: absolute;
+                inset: 0;
+                border: 2px solid transparent;
+                background: linear-gradient(90deg,
+                        transparent calc(var(--mouse-x, 0%) - 80%),
+                        #8e8e8e calc(var(--mouse-x, 0%)),
+                        transparent calc(var(--mouse-x, 0%) + 80%)) border-box;
+                background-position: 0 var(--mouse-y, 0%);
+                background-size: 100% 200%;
+                    -webkit-mask:
+                        linear-gradient(#fff 0 0) padding-box,
+                        linear-gradient(#fff 0 0);
+                    -webkit-mask-composite: destination-out;
+                mask-composite: exclude;
+                opacity: 0;
+                transition: opacity 0.3s ease;
+            }
+
+            &:hover::before {
+                opacity: 0.5;
+            }
+            .more__button__icon{
+                width: 12px;
+                height: 12px;
+                color: #323232;
+            }
+        }
+    }
+    .more__list__show{
+        height: fit-content;
+        opacity: 1;
+    }
+    .more__list__hide{
+        height: 0;
+        opacity: 0;
+    }
+
+   
 }
