--- a/client/src/layout/Sidebar.module.scss
+++ b/client/src/layout/Sidebar.module.scss
@@ -220,6 +220,7 @@
     .middle__title {
         user-select: none;
         margin: 0 auto;
+        padding-bottom: 10px;
         font-size: 16px;
         font-weight: 700;
     }
