--- a/client/src/layout/Sidebar.module.scss
+++ b/client/src/layout/Sidebar.module.scss
@@ -7,7 +7,7 @@
     height: 100%;
     max-height: 100%;
     transition: all 0.3s ease;
-
+    border-right: 1px solid #00000030;
 
     &.collapsed {
         min-width: 50px;
